RESOLVED FIXED135951
REGRESSION (WebKit2 Gestures): White flash when swiping back to cnn.com's homepage from an article
https://bugs.webkit.org/show_bug.cgi?id=135951
Summary REGRESSION (WebKit2 Gestures): White flash when swiping back to cnn.com's hom...
Tim Horton
Reported 2014-08-14 14:03:29 PDT
Attachments
patch (16.75 KB, patch)
2014-08-14 14:10 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-08-14 14:10:56 PDT
Simon Fraser (smfr)
Comment 2 2014-08-15 08:36:12 PDT
Comment on attachment 236618 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=236618&action=review > Source/WebKit2/UIProcess/API/mac/WKView.mm:3617 > +- (void)_removeNavigationGestureSnapshot > +{ > + if (_data->_gestureController) > + _data->_gestureController->removeSwipeSnapshot(); > +} swipe vs. gesture: can we use the same terminology everywhere?
Tim Horton
Comment 3 2014-08-15 11:41:30 PDT
(In reply to comment #2) > (From update of attachment 236618 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=236618&action=review > > > Source/WebKit2/UIProcess/API/mac/WKView.mm:3617 > > +- (void)_removeNavigationGestureSnapshot > > +{ > > + if (_data->_gestureController) > > + _data->_gestureController->removeSwipeSnapshot(); > > +} > > swipe vs. gesture: can we use the same terminology everywhere? I don't know how it happened (probably because we spent more time on naming for the API), but the API/view level is all about "navigation gestures" and the internals are all about "swipe" (though the SPI doesn't follow this rule). We can fix it, but for now I'm just going to follow along.
Tim Horton
Comment 4 2014-08-15 11:42:48 PDT
Note You need to log in before you can comment on or make changes to this bug.