Source/WebKit2/UIProcess/PageClient.h
@@ -229,6 +229,7 @@ public:
     virtual String dismissCorrectionPanelSoon(WebCore::ReasonForDismissingAlternativeText) = 0;
     virtual void recordAutocorrectionResponse(WebCore::AutocorrectionResponseType, const String& replacedString, const String& replacementString) = 0;
     virtual void recommendedScrollbarStyleDidChange(int32_t newStyle) = 0;
+    virtual void removeNavigationGestureSnapshot() = 0;
 
     virtual ColorSpaceData colorSpace() = 0;
 
@@ -301,6 +302,9 @@ public:
     virtual void navigationGestureWillEnd(bool willNavigate, WebBackForwardListItem&) = 0;
     virtual void navigationGestureDidEnd(bool willNavigate, WebBackForwardListItem&) = 0;
     virtual void willRecordNavigationSnapshot(WebBackForwardListItem&) = 0;
+
+    virtual void didFirstVisuallyNonEmptyLayoutForMainFrame() = 0;
+    virtual void didFinishLoadForMainFrame() = 0;
 };
 
 } // namespace WebKit
